--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,14 @@ yarn-error.log
 /.zed
 bun.lockb
 _ide_helper.php
+storage/app/.gitignore
+storage/app/private/.gitignore
+storage/app/public/.gitignore
+storage/debugbar/.gitignore
+storage/framework/.gitignore
+storage/framework/cache/.gitignore
+storage/framework/cache/data/.gitignore
+storage/framework/sessions/.gitignore
+storage/framework/testing/.gitignore
+storage/framework/views/.gitignore
+storage/logs/.gitignore
