--- a/.env.example
+++ b/.env.example
@@ -22,11 +22,13 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=sqlite
+DB_URL=
 # DB_HOST=127.0.0.1
 # DB_PORT=3306
 # DB_DATABASE=laravel
 # DB_USERNAME=root
 # DB_PASSWORD=
+DB_TENANT=
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
